# projekt3

project_2/: CMakeLists.txt  Makefile  README.md  Test.cpp  Test.h  complex.cpp  complex.h  fifo.cpp  fifo.h  main.cpp  message_dispatcher.cpp  message_dispatcher.h  message_producer.cpp  message_producer.h
project_2/message_services/: doc_presenter.cpp  doc_presenter.h  error_presenter.cpp  error_presenter.h  message_service.cpp  message_service.h  message_services.h  multimedia_player.cpp  multimedia_player.h  test_runner.cpp  test_runner.h
project_2/messages/: error_message.cpp  error_message.h  multimedia_message.cpp  multimedia_message.h  my_message.cpp  my_message.h  my_messages.h  test_message.cpp  test_message.h  text_message.cpp  text_message.h
